# rk_V8

./: .gitattributes  CMakeLists.txt  README.en.md  README.md
doc/: ǶÈëʽlinuxʵսÏîĿ£º»ùÓÚÁ¢´´̩ɽÅɵÄÍøÂçAIÉãÏñͷ.md
include/: ThreadPool.h  rk_mpi.h
include/mpi/sdk/: rk_comm_vi.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/rknn/rknpu2/: rknn_matmul_api.h
include/rknn/utils/: audio_utils.h  image_utils.h
include/rknn/yolov5/: yolov5.h
include/rknn/yolov8_pose/: postprocess.h  yolov8_pose.h
src/: main.cpp  rk_mpi.cpp
src/rknn/utils/: audio_utils.c  image_drawing.c  image_utils.c
src/rknn/yolov5/: postprocess.cc  yolov5.cc
src/rknn/yolov8/: postprocess.cc
src/rknn/yolov8_pose/: postprocess.cc  yolov8_pose.cc
yolov8_pose/python/: yolov8n-pose.data  yolov8n-pose.quantization.cfg
